Resolved the issue with spacing in the action container

--- a/style.css
+++ b/style.css
@@ -225,9 +225,12 @@ a {
     justify-content: center;
     color: white;
     font-size: large;
-    gap: 0;
+
+}
+
+.container-action .body p {
+    margin: 0px;
     padding: 0px;
-    margin: 0;
 }
 
 .container-action button {
@@ -250,7 +253,7 @@ footer {
     padding: 1em;
     font-size: larger;
 }
-
+/*
 * {
     border: 0.5px dotted blue;
 }
